[gd_scene load_steps=12 format=2]

[ext_resource path="res://Plataformas/Passagem.gd" type="Script" id=1]
[ext_resource path="res://Images/Background/Passagem/ben-musick-object-portal-e-0000.png" type="Texture" id=2]
[ext_resource path="res://Images/Background/Passagem/ben-musick-object-portal-e-0003.png" type="Texture" id=3]
[ext_resource path="res://Images/Background/Passagem/ben-musick-object-portal-e-0005.png" type="Texture" id=4]
[ext_resource path="res://Images/Background/Passagem/ben-musick-object-portal-e-0002.png" type="Texture" id=5]
[ext_resource path="res://Images/Background/Passagem/ben-musick-object-portal-e-0004.png" type="Texture" id=6]
[ext_resource path="res://Images/Background/Passagem/ben-musick-object-portal-e-0001.png" type="Texture" id=7]
[ext_resource path="res://Song/teleport.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "Portal",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 35.0629

[sub_resource type="Animation" id=3]
resource_name = "Portal"
length = 2.0
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.08, 0.08 ), Vector2( 0.09, 0.09 ), Vector2( 0.1, 0.1 ), Vector2( 0.09, 0.09 ), Vector2( 0.08, 0.08 ), Vector2( 0.09, 0.09 ), Vector2( 0.08, 0.08 ), Vector2( 0.09, 0.09 ), Vector2( 0.08, 0.08 ), Vector2( 0.09, 0.09 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ) ]
}

[node name="Passagem" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 668.381, 327.232 )
scale = Vector2( 0.1, 0.1 )
z_index = -1
frames = SubResource( 1 )
animation = "Portal"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 745.532, 329.752 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Portal = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 745.532, 329.752 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Passagem_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Passagem_body_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
